<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/root"
                                                   android:padding="8dp">

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" android:id="@+id/textInputLayout">

		<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/tlv_input"
				android:maxLines="1"
				android:imeOptions="actionDone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_tlv"/>
	</com.google.android.material.textfield.TextInputLayout>
	<androidx.recyclerview.widget.RecyclerView
			android:layout_width="0dp"
			android:layout_height="0dp"
			tools:listitem="@layout/item_tlv"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:id="@+id/tlv_list"/>
	<com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
	                                                                       android:id="@+id/decode_button"
	                                                                       android:src="@drawable/ic_done"
	                                                                       android:layout_height="wrap_content"
	                                                                       app:layout_constraintEnd_toEndOf="parent"
	                                                                       app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>